@@ -127,7 +127,7 @@ void libfloppy_LTX_plugin_fini(void)
 
 bx_floppy_ctrl_c::bx_floppy_ctrl_c()
 {
-  put("floppy", "FDD");
+  put("floppy", "FLOPPY");
   memset(&s, 0, sizeof(s));
   s.floppy_timer_index = BX_NULL_TIMER_HANDLE;
 }
