@@ -115,7 +115,7 @@ bx_virt_timer_c bx_virt_timer;
 
 bx_virt_timer_c::bx_virt_timer_c()
 {
-  put("virt_timer", "VTIME");
+  put("virt_timer", "VTIMER");
 
   setup();
 }
